fix list alignment css

--- a/src/components/SelectableList/SelectableList.scss
+++ b/src/components/SelectableList/SelectableList.scss
@@ -1,4 +1,4 @@
-too.react-autoql-list-item {
+.react-autoql-list-item {
   padding: 0 20px;
   display: flex;
   justify-content: space-between;
